# ai_image_classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  Requirements.txt  pyproject.toml
inference/: .env  app.py
inference/supabase/: auth.py  db_operations.py  storage_operations.py  supabase_init.py
inference/supabase_client/: auth.py
inference/workers/: email.py  image_prep.py  pdf_creator.py  worker.py
training/: ai-image-classifier.ipynb  training.py
